# vortex

./: .gitignore  CLAUDE.md  CMakeLists.txt  IMMEDIATE-TODO.md  README.md  test_port_config.py  vortex_1.0.3_amd64.deb
.github/workflows/: ci.yml  release.yml
bpf/: maps.h  vortex_tc_egress.bpf.c  vortex_xdp.bpf.c  vortex_xdp.h
cert/: acme_client.c  acme_dns01.c  acme_http01.c  acme_http01.h  acme_internal.h  cert_provider.h  dns_cloudflare.c  dns_cloudflare.h  dns_provider.h  static_file.c  static_file.h
config/: vortex.example.yaml
contrib/: vortex.service
fuzz/: CMakeLists.txt  fuzz_http_parser.c
include/: auth.h  bpf_loader.h  cache.h  compress_pool.h  config.h  conn.h  dashboard.h  h2.h  log.h  metrics.h  pool.h  quic.h  router.h  simd.h  tls.h  tls_pool.h  uring.h  util.h  version.h.in  worker.h  worker_internal.h
include/cert/: acme_client.h  acme_dns01.h  cert_provider.h
src/: auth.c  auth.h  bpf_loader.c  bpf_loader.h  cache.c  cache.h  compress_pool.c  config.c  config.h  conn.c  conn.h  dashboard.c  log.c  main.c  metrics.c  metrics.h  pool.c  pool.h  quic.c  quic.h  router.c  simd.c  tls.c  tls.h  tls_pool.c  tls_pool.h  uring.c  uring.h  util.h  worker.c  worker.h  worker_accept.c  worker_backend.c  worker_cache.c  worker_compress.c  worker_h2.c  worker_proxy.c
tests/: CMakeLists.txt  test_auth.c  test_cache.c  test_config.c  test_log.c  test_router.c
tools/: bench.sh  build_deb.sh  gen_vmlinux.sh  test_phase6.sh  test_phase7.sh  test_xdp.sh  vortex-passwd.py
